@@ -346,9 +346,13 @@
   // default behavior since Orthanc 1.4.0).
   "LogExportedResources" : false,
 
-  // Enable or disable HTTP Keep-Alive (deprecated). Set this option
-  // to "true" only in the case of high HTTP loads.
-  "KeepAlive" : false,
+  // Enable or disable HTTP Keep-Alive (persistent HTTP
+  // connections). Setting this option to "true" prevents Orthanc
+  // issue #32 ("HttpServer does not support multiple HTTP requests in
+  // the same TCP stream"), but can slow down HTTP clients that do not
+  // support persistent connections. The default behavior used to be
+  // "false" in Orthanc <= 1.5.1.
+  "KeepAlive" : true,
 
   // If this option is set to "false", Orthanc will run in index-only
   // mode. The DICOM files will not be stored on the drive. Note that
