@@ -4,14 +4,16 @@ Pending changes in the mainline
 Maintenance
 -----------
 
+* CivetWeb is now the default embedded HTTP server (instead of Mongoose)
 * Don't consider tags whose group is below 0x0008 in C-FIND SCP
 * Compatibility with DCMTK 3.6.4
 * Fix issue #21 (DICOM files missing after uploading with Firefox)
+* Fix issue #32 (HTTP keep-alive is now enabled by default)
 * Fix issue #118 (Wording in Configuration.json regarding SynchronousCMove)
 * Fix issue #124 (GET /studies/ID/media fails for certain dicom file)
 * Fix issue #125 (Mongoose: /instances/{id} returns 500 on invalid HTTP Method)
 * Fixed Orthanc Explorer on IE and Firefox: Explorer always show "too many results"
-  and it's therefore impossible to browse the content.
+  and it's therefore impossible to browse the content
 * Upgraded dependencies for static and Windows builds:
   - civetweb 1.11
 
